--- a/Demo-Cocoapods/Podfile
+++ b/Demo-Cocoapods/Podfile
@@ -1,6 +1,6 @@
 platform :ios, '13.0'
 
 target "IRLPDFScanDemo" do
-    pod 'IRLPDFScanContent'
+    pod 'IRLPDFScanContent', '~> 1.0.2'
     use_frameworks!
 end
